app/networks/api-network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: api-network-policy
  namespace: api
spec:
  podSelector:
    matchLabels: {}
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            app: backend
      ports:
        - port: 4000
          protocol: TCP
    - from:
      - podSelector:
          matchLabels:
            app: istio-ingressgateway
      ports:
        - port: 4000
          protocol: TCP
