app/networks/core-service-network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: core-service-network-policy
  namespace: scanners
spec:
  podSelector:
    matchLabels: 
      role: scanning
      purpose: core
  ingress:
    - ports:
      # Allow DNS
      - port: 53
      # Allow external traffic
      - port: 80
      - port: 443
    # Allow from database
    - from:
      - podSelector:
          matchLabels:
            role: backend
            purpose: db
      ports:
        - port: 8529
  policyTypes:
    - Egress
  egress:
    - ports:
      # Allow DNS
      - port: 53
      # Allow external traffic
      - port: 80
      - port: 443
    # Allow traffic to the db
    - to:
      - podSelector:
          matchLabels:
            role: backend
            purpose: db
      ports:
        - port: 8529
