app/networks/dns-network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: dns-scanner-network-policy
  namespace: scanners
spec:
  podSelector:
    matchLabels:
      role: scanning
      purpose: dns-scanner
  ingress:
    - ports:
      # Allow DNS traffic
      - port: 53
      # Allow HTTP traffic
      - port: 80
      - port: 443
  policyTypes:
    - Egress
  egress:
    - ports:
      # Allow DNS traffic
      - port: 53
      # Allow HTTP traffic
      - port: 80
      - port: 443
