app/networks/frontend-network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: frontend-network-policy
  namespace: frontend
spec:
  podSelector:
    matchLabels: 
      role: frontend
      purpose: frontend
  ingress:
    # Allow traffic from the istio gateway
    - from:
      - namespaceSelector:
          matchLabels:
            role: gateway
            purpose: traffic-handling
      ports:
        - port: 3000
    - ports:
      # Allow DNS
      - port: 53
  policyTypes:
    - Egress
  egress:
      # Allow DNS Resolution
      - ports:
        - port: 53
      # Allow egress to the gateway
      - to:
        - podSelector:
            matchLabels:
               role: gateway
               purpose: traffic-handling
        ports:
          - port: 3000
