app/networks/https-scanner-network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: https-scanner-network-policy
  namespace: scanners
spec:
  podSelector:
    matchLabels:
      role: scanning
      purpose: https-scanner
  ingress:
    # Allow traffic from auto scanner
    - from:
      - podSelector:
          matchLabels:
            role: scanner
            purpose: auto-scan
      ports:
        - port: 80
        - port: 443
    - ports:
      # Allow DNS
      - port: 53
      # Allow external traffic
      - port: 80
      - port: 443
  policyTypes:
    - Egress
  egress:
    - ports:
      # Allow DNS
      - port: 53
      # Allow external traffic
      - port: 80
      - port: 443
    # Allow auto scanner traffic
    - to:
      - podSelector:
         matchLabels:
           role: scanning
           purpose: auto-scan
      ports:
        - port: 80
        - port: 443
