app/networks/result-processor-network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: result-processor-network-policy
  namespace: result-processor
spec:
  podSelector:
    matchLabels:
      role: scanning
      purpose: result-processor
  ingress:
    - ports:
      # Allow DNS traffic
      - port: 53
      # Allow HTTP traffic
      - port: 80
      - port: 443
      # Allow redis (until full implementation is setup)
      - port: 6379
    # Ingress policy for db communications
    - from:
      - podSelector:
          matchLabels:
            role: backend
            purpose: db
      ports:
        - port: 8529
  policyTypes:
    - Egress
  egress:
    - ports:
      # Allow DNS traffic
      - port: 53
      # Allow HTTP traffic
      - port: 80
      - port: 443
      # Allow redis (until full implementation is setup)
      - port: 6379
    # Egress policy for database
    - to:
      - podSelector:
          matchLabels:
            role: backend
            purpose: db
      ports:
        - port: 8529
