app/networks/scanners-network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: scanners-network-policy
  namespace: scanners
spec:
  podSelector:
    matchLabels: {}
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            purpose: backend
      ports:
        - port: 8529
          protocol: TCP
        - port: 4000
          protocol: TCP
